--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -9,19 +9,18 @@
   <title>서초 AI 프로젝트 제목</title>
 
   <!-------------------- MAIN CSS -------------------->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/find_dog.css') }}">
 
   <!-------------------- CSS IMPORTS -------------------->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet">
   <link href="https://unpkg.com/survey-jquery/defaultV2.min.css" type="text/css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-  <!-------------------- JS IMPORTS -------------------->
+  <!-------------------- JS IMPORTS(PRE) -------------------->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/survey-jquery"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-  </script>
 
 </head>
 
@@ -74,10 +73,15 @@
   </header>
 
   <!-------------------- DOG LIST -------------------->
-  <div class="dog-list-container container-fluid bg-light">
-    <div class="dog-list row gy-5"></div>
-  </div>
-  </div>
+  <section class="container-fluid min-vh-100 px-0" id="dog-list-section">
+    <div class="overlay-dog-list-section min-vh-100">
+      <div class="container">
+
+        <div class="dog-list row gy-5"></div>
+
+      </div>
+    </div>
+  </section>
 
   <script id="template-dog-list" type="text/template">
     <div class="col-12 col-lg-3 col-md-4 col-sm-6 bg-light">
@@ -88,11 +92,18 @@
     </div>
   </script>
 
-  <!-------------------- JS IMPORT -------------------->
+  <!-------------------- MAIN JS -------------------->
   <script src="{{ url_for('static', filename='js/find_dog.js') }}"></script>
 
-  <!-------------------- BOOTSTRAP IMPORT (JS) -------------------->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+  <!-------------------- JS IMPORTS -------------------->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
+
+  <!-- Initiate Pure Counter -->
+  <script>
+    new PureCounter();
   </script>
 
 </body>
