--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,11 @@
   <link href="https://unpkg.com/survey-jquery/defaultV2.min.css" type="text/css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+  <!-------------------- JS IMPORTS(PRE) -------------------->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/survey-jquery"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
+
 </head>
 
 <body>
@@ -28,7 +33,7 @@
       <div class="container">
 
         <!-- NAV-LOGO -->
-        <a class="navbar-brand" href="#home">Abandog</a>
+        <a class="navbar-brand" href="#home-section">Abandog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dog-navbar" aria-controls="dog-navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -68,7 +73,7 @@
   </header>
 
   <!-------------------- HOME SECTION -------------------->
-  <section class="container-fluid bg-info min-vh-100 px-0 align-items-center" id="home-section" style="background-image: url({{ url_for('static', filename='img/home-bg-img.jpg') }})">
+  <section class="container-fluid min-vh-100 px-0 align-items-center" id="home-section" style="background-image: url({{ url_for('static', filename='img/home-bg-img.jpg') }})">
     <div class="overlay-home-section min-vh-100">
       <div class="container" data-aos="fade-up" data-aos-delay="100" data-aos-once="true">
 
@@ -197,9 +202,6 @@
   <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 
   <!-------------------- JS IMPORTS -------------------->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script type="text/javascript" src="https://unpkg.com/survey-jquery"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
