--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
       <div class="container">
 
         <!-- NAV-LOGO -->
-        <a class="navbar-brand" href="#home-section">Abandog</a>
+        <a class="navbar-brand" href="#home" onclick="moveToHomePage()">Abandog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dog-navbar" aria-controls="dog-navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
