--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -84,15 +84,27 @@
   </section>
 
   <script id="template-dog-list" type="text/template">
-    <div class="col-12 col-lg-3 col-md-4 col-sm-6 bg-light">
-      <div class="card">
-        <img class="card-img-top" src="{popfile}" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">{kindCd}</p>
-          <p class="card-text">{sexCd}</p>
-          <p class="card-text">{happenDt}</p>
-          <p class="card-text">{noticeNo}</p>
-          <p class="card-text">{processState}</p>
+    <div class="col-12 col-xl-3 col-lg-4 col-md-6 col-sm-12 bg-light dog-card-container">
+      <div class="card dog-card">
+
+        <div class="row g-0">
+
+          <div class="col-6 col-md-12">
+            <img class="card-img img-thumbnail" src="{popfile}" alt="Card image cap" style="height: 15rem;">
+          </div>
+
+          <div class="col-6 col-md-12">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">{kindCd}</p>
+              <p class="card-text">{sexCd}</p>
+              <p class="card-text">{happenDt}</p>
+              <p class="card-text">{noticeNo}</p>
+              <p class="card-text">{processState}</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
