--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
   </header>
 
   <!-------------------- HOME SECTION -------------------->
-  <section class="container-fluid min-vh-100 px-0 align-items-center" id="home-section" style="background-image: url({{ url_for('static', filename='img/home-bg-img.jpg') }})">
+  <section class="container-fluid min-vh-100 px-0 align-items-center bg-image" id="home-section" style="background-image: url({{ url_for('static', filename='img/home-bg-img.jpg') }})">
     <div class="overlay-home-section min-vh-100">
       <div class="container" data-aos="fade-up" data-aos-delay="100" data-aos-once="true">
 
