--- a/templates/survey.html
+++ b/templates/survey.html
@@ -74,7 +74,7 @@
 
   <!-------------------- SURVEY PAGE -------------------->
   <section class="container-fluid min-vh-100 px-0 align-items-center">
-    <div class="overlay-survey-page-section min-vh-100">
+    <div class="overlay-survey-page-section min-vh-100 survey-bg">
       <div class="container">
 
         <!-- Survey questions will be displayed here -->
