--- a/static/css/find_dog.css
+++ b/static/css/find_dog.css
@@ -8,9 +8,28 @@ html {
 /**
  * Body BG color
  */
-/* body {
-  background-color: rgb(217, 248, 196) !important;
-} */
+body {
+  background-color: #F5F5FA !important;
+}
+
+/**
+ * Find dog BG color
+ */
+.find-dog-bg {
+  background-color: #F5F5FA;
+}
+
+.card-body {
+  background-color: #FFFFFF;
+  color: #7F8487 !important;
+}
+
+.dog-card:hover {
+  transition: 0.5s;
+  box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .3) !important;
+  opacity: 0.7;
+  cursor: pointer;
+}
 
 /**
  * Scroll bar custom
@@ -34,48 +53,61 @@ html {
  * NAVBAR
  */
 #navbar {
-  background-color: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(15px);
+  background-color: transparent;
 }
 
-@media (min-width: 768px) {
+/**
+ * Nav change color on scroll
+ */
+#header.scroll-header {
+  background-color: #FFFFFF !important;
+  transition: background-color 300ms linear;
+}
 
-  #dog-navbar a,
-  #dog-navbar a:focus {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: 600;
-    color: rgba(255, 255, 255, 0.6);
-    transition: 0.3s;
-    position: relative;
-  }
+#dog-navbar a,
+#dog-navbar a:focus {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 600;
+  color: #575757;
+  transition: all 0.3s ease-in-out 0s;
+  position: relative;
+}
 
-  #dog-navbar>ul>li>a:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: -6px;
-    left: 0;
-    background-color: orange;
-    visibility: hidden;
-    width: 0px;
-    transition: all 0.3s ease-in-out 0s;
-  }
+#dog-navbar>ul>li>a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+  background-color: orange;
+  visibility: hidden;
+  width: 0px;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+#dog-navbar a:hover:before,
+#dog-navbar li:hover>a:before,
+#dog-navbar .active:before {
+  visibility: visible;
+  width: 100%;
+}
+
+#dog-navbar a:hover,
+#dog-navbar .active,
+#dog-navbar .active:focus,
+#dog-navbar li:hover>a {
+  color: orange;
+}
+
+@media (max-width: 768px) {
 
   #dog-navbar a:hover:before,
   #dog-navbar li:hover>a:before,
   #dog-navbar .active:before {
-    visibility: visible;
-    width: 100%;
-  }
-
-  #dog-navbar a:hover,
-  #dog-navbar .active,
-  #dog-navbar .active:focus,
-  #dog-navbar li:hover>a {
-    color: #fff;
+    visibility: hidden;
   }
 }
 
