--- a/static/css/find_dog.css
+++ b/static/css/find_dog.css
@@ -24,6 +24,107 @@ body {
   color: #7F8487 !important;
 }
 
+/**
+ * NAVBAR
+ */
+#navbar,
+#navbar2 {
+  background-color: transparent;
+}
+
+/**
+ * Nav change color on scroll
+ */
+#header.scrolled,
+#navbar2.scrolled {
+  background-color: #FFFFFF !important;
+  transition: background-color 300ms linear;
+}
+
+#dog-navbar a,
+#dog-navbar a:focus,
+#dog-navbar2 a,
+#dog-navbar2 a:focus {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 600;
+  color: #575757;
+  transition: all 0.3s ease-in-out 0s;
+  position: relative;
+}
+
+#dog-navbar>ul>li>a:before,
+#dog-navbar2>ul>li>a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+  background-color: orange;
+  visibility: hidden;
+  width: 0px;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+#dog-navbar a:hover:before,
+#dog-navbar li:hover>a:before,
+#dog-navbar .active:before,
+#dog-navbar2 a:hover:before,
+#dog-navbar2 li:hover>a:before,
+#dog-navbar2 .active:before {
+  visibility: visible;
+  width: 100%;
+}
+
+#dog-navbar a:hover,
+#dog-navbar .active,
+#dog-navbar .active:focus,
+#dog-navbar li:hover>a,
+#dog-navbar2 a:hover,
+#dog-navbar2 .active,
+#dog-navbar2 .active:focus,
+#dog-navbar2 li:hover>a {
+  color: orange;
+}
+
+@media (max-width: 768px) {
+
+  #dog-navbar a:hover:before,
+  #dog-navbar li:hover>a:before,
+  #dog-navbar .active:before {
+    visibility: hidden;
+  }
+}
+
+/**
+ * NAVBAR Logo
+ */
+.navbar-logo {
+  color: orange !important;
+  font-weight: 600;
+}
+
+/**
+ * Dog search
+ */
+.dog-search-icon {
+  color: #575757;
+  width: 24px;
+  height: 24px;
+  padding-top: 12px;
+}
+
+.dog-search:hover>i {
+  color: orange;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.scroll-header {
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, .15);
+}
+
 .dog-card:hover {
   transition: 0.5s;
   box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .3) !important;
@@ -47,72 +148,6 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: hsl(230, 8%, 65%);
-}
-
-/**
- * NAVBAR
- */
-#navbar {
-  background-color: transparent;
-}
-
-/**
- * Nav change color on scroll
- */
-#header.scroll-header {
-  background-color: #FFFFFF !important;
-  transition: background-color 300ms linear;
-}
-
-#dog-navbar a,
-#dog-navbar a:focus {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-weight: 600;
-  color: #575757;
-  transition: all 0.3s ease-in-out 0s;
-  position: relative;
-}
-
-#dog-navbar>ul>li>a:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: -6px;
-  left: 0;
-  background-color: orange;
-  visibility: hidden;
-  width: 0px;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-#dog-navbar a:hover:before,
-#dog-navbar li:hover>a:before,
-#dog-navbar .active:before {
-  visibility: visible;
-  width: 100%;
-}
-
-#dog-navbar a:hover,
-#dog-navbar .active,
-#dog-navbar .active:focus,
-#dog-navbar li:hover>a {
-  color: orange;
-}
-
-@media (max-width: 768px) {
-
-  #dog-navbar a:hover:before,
-  #dog-navbar li:hover>a:before,
-  #dog-navbar .active:before {
-    visibility: hidden;
-  }
-}
-
-.scroll-header {
-  box-shadow: 0 -1px 10px rgba(0, 0, 0, .15);
 }
 
 /**
