--- a/static/css/find_dog.css
+++ b/static/css/find_dog.css
@@ -122,7 +122,7 @@ body {
 }
 
 .scroll-header {
-  box-shadow: 0 -1px 10px rgba(0, 0, 0, .15);
+  box-shadow: 0 0 10px rgba(255, 165, 0);
 }
 
 .dog-card:hover {
