--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -77,8 +77,34 @@
         </li>
 
         <!-- SEARCH ICON -->
-        <!-- <li class="nav-item ms-md-4"><button class="btn dog-search-btn"><i class="fa-solid fa-magnifying-glass fa-lg dog-search"></i></button></li> -->
-        <li class="nav-item me-2"><a class="nav-link dog-search"><i class="fa-solid fa-magnifying-glass fa-lg dog-search-icon"></i></a></li>
+        <!-- <li class="nav-item me-2"><a class="nav-link dog-search" data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-magnifying-glass fa-lg dog-search-icon"></i></a></li> -->
+        <li class="nav-item me-2">
+          <button type="button" class="btn nav-link dog-search" data-toggle="modal" data-target="#exampleModal">
+            <i class="fa-solid fa-magnifying-glass fa-lg dog-search-icon"></i>
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+
       </ul>
 
       <!-- NAV-LINKS -->
