--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -18,8 +18,11 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.4/pagination.css" />
 
-  <!-------------------- JS IMPORTS(PRE) -------------------->
+  <!-------------------- JS IMPORTS -------------------->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://unpkg.com/survey-jquery"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.4/pagination.min.js"></script>
@@ -66,44 +69,32 @@
   <!-------------------- NAVBAR 2 -------------------->
   <nav class="navbar navbar-expand navbar-light py-3 sticky-top" id="navbar2" aria-label="dog-navbar2">
     <div class="container" id="dog-navbar2">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav filter-search-nav">
         <!-- NAV-FILTER -->
         <li class="nav-item me-2">
-          <a class="nav-link">전체 지역</a>
+          <a class="nav-link filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
+            전체 지역
+          </a>
         </li>
 
         <li class="nav-item me-2">
-          <a class="nav-link">전체 종</a>
+          <a class="nav-link filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
+            전체 종
+          </a>
         </li>
 
         <!-- SEARCH ICON -->
-        <!-- <li class="nav-item me-2"><a class="nav-link dog-search" data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-magnifying-glass fa-lg dog-search-icon"></i></a></li> -->
         <li class="nav-item me-2">
-          <button type="button" class="btn nav-link dog-search" data-toggle="modal" data-target="#exampleModal">
+          <a class="nav-link dog-search filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
+            <i class="fa-solid fa-magnifying-glass fa-lg dog-search-icon"></i>
+          </a>
+        </li>
+
+        <!-- <li class="nav-item me-2">
+          <button type="button" class="btn nav-link dog-search" data-bs-toggle="modal" data-bs-target="#filterModal">
             <i class="fa-solid fa-magnifying-glass fa-lg dog-search-icon"></i>
           </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
+        </li> -->
 
       </ul>
 
@@ -111,15 +102,48 @@
       <ul class="navbar-nav">
 
         <!-- LINK to FIND DOG SECTION -->
-        <li class="nav-item ms-2"><a class="nav-link active" href="#find-dog-section">유기견</a></li>
+        <li class="nav-item ms-2">
+          <a class="nav-link active" href="#find-dog-section">유기견</a>
+        </li>
 
         <!-- LINK to SURVEY SECTION -->
-        <li class="nav-item ms-2"><a class="nav-link nav-survey" href="#survey-section" onclick="moveToSurveyPage()">보호소</a></li>
+        <li class="nav-item ms-2">
+          <a class="nav-link nav-survey" href="#survey-section" onclick="moveToSurveyPage()">보호소</a>
+        </li>
 
       </ul>
 
     </div>
   </nav>
+
+  <!-------------------- FILTER MODAL -------------------->
+  <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+
+      <!-- Modal Content -->
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h5 class="modal-title" id="filterModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <!-- Modal Body -->
+        <div class="modal-body">
+          ...
+        </div>
+
+        <!-- Modal Footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
 
   <!-------------------- DOG LIST -------------------->
   <section class="container-fluid min-vh-100 px-0" id="dog-list-section">
@@ -179,9 +203,6 @@
   <script src="{{ url_for('static', filename='js/find_dog.js') }}"></script>
 
   <!-------------------- JS IMPORTS -------------------->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 
