--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -131,7 +131,6 @@
 
         <!-- Modal Body -->
         <div class="modal-body">
-          ...
         </div>
 
         <!-- Modal Footer -->
@@ -188,6 +187,15 @@
         </div>
       </div>
     </div>
+  </script>
+
+  <script id="template-dog-filter" type="text/template">
+    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+      <option selected>전체 지역</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
   </script>
 
   <!-- <script id="template-shelter-list" type="text/template">
