--- a/static/css/dog_posts.css
+++ b/static/css/dog_posts.css
@@ -156,8 +156,8 @@ body {
 }
 
 /**
- * DOG LIST SECTION
+ * DOG POST SECTION
  */
 .overlay-dog-posts-section .container {
-  padding-top: 10rem;
+  /* padding-top: 10rem; */
 }
