--- a/templates/dog_info.html
+++ b/templates/dog_info.html
@@ -9,7 +9,7 @@
   <title>서초 AI 프로젝트 제목</title>
 
   <!-------------------- MAIN CSS -------------------->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/dog_posts.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/dog_info.css') }}">
 
   <!-------------------- CSS IMPORTS -------------------->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -196,7 +196,7 @@
     <div class="overlay-dog-posts-section min-vh-100 dog-posts-bg">
       <div class="container">
 
-        <div class="dog-post row"></div>
+        <div class="dog-post-container row"></div>
 
       </div>
     </div>
@@ -207,14 +207,24 @@
   </script>
 
   <script id="template-dog-post" type="text/template">
-    <img class="img-fluid align-self-center" src="{popfile}" alt="dog photo">
-    <div class="col">
-      {kindCd}
+
+    <div class="dog-post row bg-info">
+      <div class="col-5 justify-content-center">
+        <img class="dog-post-img" src={popfile} alt="dog photo">
+      </div>
+
+      <div class="col-7">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe et quo, veritatis consectetur pariatur voluptas, asperiores, soluta natus blanditiis facere dolorum assumenda eos praesentium eaque ipsam officia. Aut, officiis quidem.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe et quo, veritatis consectetur pariatur voluptas, asperiores, soluta natus blanditiis facere dolorum assumenda eos praesentium eaque ipsam officia. Aut, officiis quidem.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe et quo, veritatis consectetur pariatur voluptas, asperiores, soluta natus blanditiis facere dolorum assumenda eos praesentium eaque ipsam officia. Aut, officiis quidem.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe et quo, veritatis consectetur pariatur voluptas, asperiores, soluta natus blanditiis facere dolorum assumenda eos praesentium eaque ipsam officia. Aut, officiis quidem.</p>
+      </div>
     </div>
+
   </script>
 
   <!-------------------- MAIN JS -------------------->
-  <script src="{{ url_for('static', filename='js/dog_posts.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/dog_info.js') }}"></script>
 
   <!-------------------- JS IMPORTS -------------------->
 
