--- a/templates/survey.html
+++ b/templates/survey.html
@@ -51,7 +51,7 @@
             <li class="nav-item ms-md-4"><a class="nav-link nav-find-dog" href="#find-dog-section" onclick="moveToAbandonedDogPage()">유기견 찾기</a></li>
 
             <!-- LINK to SURVEY SECTION -->
-            <li class="nav-item ms-md-4"><a class="nav-link active" href="#survey-section">AI 유기견 추천</a></li>
+            <li class="nav-item ms-md-4"><a class="nav-link active nav-survey" href="#survey-section" onclick="moveToSurveyPage()">AI 유기견 추천</a></li>
 
           </ul>
 
