--- a/static/css/find_dog.css
+++ b/static/css/find_dog.css
@@ -166,8 +166,6 @@ body {
  * Dog Thumbnail Image
  */
 .dog-thumbnail-img {
-  pointer-events: none;
-  width: 100%;
-  /* height: 100%; */
-  object-fit: cover;
+  /* width: 100%; */
+  object-fit: contain;
 }
